--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@
 									</div>
 								</div>
 
+								<div class = "morgCalcNotHidden" id = "morgCalcTwo" a href="#mortgageCalc" >Learn About Mortgage Loans</a>	
+
 							</div>
 							<div class="col50">
 								<div class="ficoVisual">
