added button to page 3 testing visibility

--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
 									<a href="#mortgageCalc" class="btn">Learn About Mortgage Loans</a>			
 
 								</div>
+								<div class = "#morgCalcNotHidden"> 
+									<a href="#mortgageCalc" class="btn">Learn About Mortgage Loans</a>		
+								</div>
 								<div class="creditScoreGame" id="creditScoreGame">
 									<h1 id="question">Do you open a lot of credit cards?</h1>
 									<div class="choice-container" id="creditChoice1A">
