fixed css class name for morgCalcNotHidden

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 									</div>
 								</div>
 
-								<div class = "#morgCalcNotHidden"> 
+								<div class = "morgCalcNotHidden"> 
 									<a href="#mortgageCalc" class="btn">Learn About Mortgage Loans</a>		
 								</div>
 
