creditScoreDesc should not hide on button click

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 									<h1 id="question">Do you open a lot of credit cards?</h1>
 									<div class="choice-container" id="creditChoice1A">
 										<p class="choice-prefix">A</p>
-										<p class="choice-text" data-number="1">Yes</p>
+										<p class="choice-t6ext" data-number="1">Yes</p>
 									</div>
 									<div class="choice-container" id="creditChoice1B">
 										<p class="choice-prefix">B</p>
